[build-system]
build-backend = 'setuptools.build_meta'
requires = [
  'pydantic-ai[all]<0.0.37',
  'pyvista[all]<0.44.2',
  'setuptools<69.0.4',
]

[project]
dependencies = [
  'pydantic-ai[all]<0.0.37',
  'pyvista[all]<0.44.2',
]
dynamic = ["readme", "version"]
name = "pyvista-ai"

[tool.ruff]
line-length = 150

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["COM812", "D203", "D212", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = true
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["D205", "D400", "D415", "INP001", "T201"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }
version = { attr = 'pyvista_ai.__version__' }
